// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button 스냅샷 - disabled 상태 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    className="
          items-center justify-center rounded-xl px-8 py-3
          bg-[#CDCDCF]
        "
    collapsable={false}
    style={
      {
        "height": 52,
        "marginHorizontal": 0,
      }
    }
  >
    <Text
      className="
          text-lg font-semibold
          text-gray-500
        "
    >
      확인
    </Text>
  </View>
</View>
`;

exports[`Button 스냅샷 - error variant 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    className="
          items-center justify-center rounded-xl px-8 py-3
          bg-error-500
        "
    collapsable={false}
    style={
      {
        "height": 52,
        "marginHorizontal": 0,
      }
    }
  >
    <Text
      className="
          text-lg font-semibold
          text-white
        "
    >
      확인
    </Text>
  </View>
</View>
`;

exports[`Button 스냅샷 - primary variant (기본값) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    className="
          items-center justify-center rounded-xl px-8 py-3
          bg-main-500
        "
    collapsable={false}
    style={
      {
        "height": 52,
        "marginHorizontal": 0,
      }
    }
  >
    <Text
      className="
          text-lg font-semibold
          text-white
        "
    >
      확인
    </Text>
  </View>
</View>
`;

exports[`Button 스냅샷 - secondary variant 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    className="
          items-center justify-center rounded-xl px-8 py-3
          border-2 border-main-500 bg-white
        "
    collapsable={false}
    style={
      {
        "height": 52,
        "marginHorizontal": 0,
      }
    }
  >
    <Text
      className="
          text-lg font-semibold
          text-main-500
        "
    >
      확인
    </Text>
  </View>
</View>
`;
